[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/ball/ball.gd" type="Script" id=1]
[ext_resource path="res://objects/ball/ball_white.png" type="Texture2D" id=2]
[ext_resource path="res://assets/ui/fonts/data/kenney_mini.ttf" type="FontFile" id=3]
[ext_resource path="res://objects/ball/arrow.png" type="Texture2D" id=4]

[sub_resource type="FontFile" id=2]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[node name="Ball" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 11
script = ExtResource( 1 )

[node name="SprBody" type="Sprite2D" parent="."]
position = Vector2( 0, -5 )
texture = ExtResource( 2 )

[node name="LblPlayerName" type="Label" parent="."]
offset_left = -23.0
offset_top = -20.0
offset_right = 23.0
offset_bottom = -10.0
custom_fonts/font = SubResource( 2 )
text = "N/A"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SprArrow" type="Sprite2D" parent="."]
visible = false
position = Vector2( 0, -19 )
scale = Vector2( 0.3125, 0.3 )
texture = ExtResource( 4 )

[node name="CenterPos" type="Marker2D" parent="."]
position = Vector2( 0, -3 )

[node name="ShapeBody" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
rotation = 1.5708
shape = SubResource( 1 )
